chore: get rid of sysout, and other sonar comments